1.4.0.2 - Fixed UI overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .main-app {
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   display: grid;
-  grid-auto-rows: 25% 37.5% 37.5%;
+  grid-auto-rows: 25% 50%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
