--- a/src/Friends/Friends.css
+++ b/src/Friends/Friends.css
@@ -1,7 +1,9 @@
 .Friends {
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   display: grid;
-  grid-auto-rows: 25% 50% 25%;
+  grid-auto-rows: 25% 50%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
